added meta data to geo tracking incl. a service endpoint
